Fix z-index in ui-dialog

--- a/app/less/_jquery-slider.less
+++ b/app/less/_jquery-slider.less
@@ -102,6 +102,7 @@ jQuery Slider
 	position: absolute !important;
 	top: 0px !important;
 	left: 0px !important;
+	z-index: 1;
 	display: block;
 	bottom: 0px !important;
 	right: 0px !important;
